# snitch-game

./: .gitignore  LAUNCH-CHECKLIST.md  README.md
contracts/: Anchor.toml
contracts/programs/snitch/: Cargo.toml
contracts/programs/snitch/src/: lib.rs  state.rs  utils.rs
contracts/programs/snitch/src/instructions/: admin.rs  claim_rewards.rs  commit_choice.rs  initialize.rs  mod.rs  resolve_round.rs  reveal_choice.rs
contracts/tests/: snitch.ts
docs/: 404.html  MASTER-PLAN.md  drama.html  drama.txt  index.html  index.txt  play.html  play.txt
docs/_next/static/chunks/: 23-cf97fe214b2e822d.js  main-2711802bf0ce05d0.js  main-app-2ffa8bca2768a22e.js  main-faac993fea263804.js  webpack-ff2589ff15fdd1cd.js
docs/_next/static/chunks/app/: layout-416f0ccf28af0c3e.js  page-74e26305ec8afd21.js
docs/_next/static/chunks/app/drama/: page-c7874ffc6ab49c7d.js
docs/_next/static/chunks/app/play/: page-3c32f44e325d02bb.js
docs/_next/static/css/: 03724b80bc307ce1.css
docs/gtm/: gtm-assets.md  guerrilla-marketing.md  target-communities.md
scripts/twitter-bot/: .env.example  package.json
scripts/twitter-bot/src/: index.ts  scheduler.ts  templates.ts  twitter.ts
website/: next.config.js  package-lock.json  package.json  tailwind.config.js
website/app/: globals.css  layout.tsx  page.tsx
website/app/drama/: page.tsx
website/app/play/: page.tsx
website/components/: Countdown.tsx  DramaFeed.tsx  InterrogationUI.tsx  WalletButton.tsx
