[package]
name = "snitch"
version = "1.0.0"
description = "$SNITCH - Prisoner's Dilemma Game on Solana"
edition = "2021"
authors = ["SNITCH Team"]
license = "MIT"
repository = "https://github.com/snitch/snitch-contracts"

[lib]
crate-type = ["cdylib", "lib"]
name = "snitch"

[features]
default = ["cpi"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["metadata"] }
solana-program = "1.18.18"

[dev-dependencies]
anchor-client = "0.30.1"
